Partial_14Dec2021/force-app/main/default/objects/Bi_Monthly_Batch__c/Bi_Monthly_Batch__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Bi Monthly Batch</label>
</CustomObject>