Partial_14Dec2021/force-app/main/default/objects/Bi_Monthly_Batch__c/fields/Color_Language_Size__c.field-meta.xml
<CustomField>
    <fullName>Color_Language_Size__c</fullName>
    <label>Color/Language/Size</label>
    <length>200</length>
    <type>Text</type>
</CustomField>