Partial_14Dec2021/force-app/main/default/objects/Bi_Monthly_Batch__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Item Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>