Partial_14Dec2021/force-app/main/default/objects/Bi_Monthly_Batch__c/fields/Product_Discription__c.field-meta.xml
<CustomField>
    <fullName>Product_Discription__c</fullName>
    <label>Product Discription</label>
    <length>200</length>
    <type>Text</type>
</CustomField>